Project-2/LOCOAL/gym-k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-app
  namespace: gym-dev
  labels:
    app: gym-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: gym-app
template:
  metadata:
    labels:
      app: gym-app
  spec:
    containers:
      - name: gym-app-container
        image: chethan2527/gym:v1
        resources:
          requests:
            cpu: 250m
            memory: 100Mi
          limits:
            cpu: 400m
            memory: 150Mi
