Project-2/LOCOAL/gym-k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: gym-app-service
spec:
  type: ClusterIP
selector:
  app: gym-app
  ports:
    - port: 80
      targetPort: 8001
      protocol: TCP
