Project-2/LOCOAL/gym-k8s/gym-Ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gym-app-ingress
  namespace: gym-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: gym.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gym-app-service
                port:
                  number: 80
